# gac-2024-v1-cognitive-map

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: analysis.py  analysis_baseline.py  analysis_drift_direction.py  analysis_microsaccade.py  analysis_pathlength.py  analysis_position.py  analysis_xy_movement.py  example.py  eye_movement_controls.py  microsaccades.py  msacc.py  plot_results_GAC.m  position.py  preprocessing.py
utils/: __init__.py
